Fix: Added correct links to several tiles and added no-wrap classes to rounded btns

--- a/CSS/clothingNew_copy.scss
+++ b/CSS/clothingNew_copy.scss
@@ -303,7 +303,7 @@ main {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  min-width: 175px;
+  min-width: auto;
   // background: #ffffff;
   margin: 0 calc(2 * var(--standard-margin)) 0 var(--standard-margin);
 }
