--- a/CSS/stylesystem.scss
+++ b/CSS/stylesystem.scss
@@ -369,6 +369,10 @@
   font-weight: 600;
 }
 
+.no-wrap {
+  white-space: nowrap;
+}
+
 // 4. Colours & Opacity
 
 .color-primary {
